# gitfindr-rs

./: Cargo.toml  README.md
src/: main.rs
src/err/: mod.rs
