[package]
name = "gitfindr-rs"
version = "0.1.0"
authors = ["William Tarte <William.tarte6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
clap = "2.33.3"
confy = "0.4.0"
either = "1.6.0"